[gd_scene load_steps=4 format=3 uid="uid://btahw7dqfc1c6"]

[ext_resource type="FontFile" uid="uid://co6004ceglhuk" path="res://fonts/SUSEMono-Bold.ttf" id="1_28ion"]
[ext_resource type="Script" uid="uid://cxoi32xodghe3" path="res://blueprints/Interactions/lockers/interacting_componet.gd" id="1_555f3"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_2myrm"]
length = 2.0

[node name="InteractingComponet" type="Node3D"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_555f3")

[node name="InteractRange" type="Area3D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractRange"]
visible = false
shape = SubResource("SeparationRayShape3D_2myrm")

[node name="CSGBox3D" type="CSGBox3D" parent="InteractRange/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.0053729)
visible = false
size = Vector3(0.040039063, 0.04953003, 2)

[node name="InteractLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7484555e-07, -1, 2)
visible = false
billboard = 1
no_depth_test = true
text = "E to Interact"
font = ExtResource("1_28ion")

[node name="InteractRangeRay" type="RayCast3D" parent="."]
transform = Transform3D(1, -8.742278e-08, -8.7422755e-08, 8.742278e-08, 1.3113416e-07, 1, -8.742277e-08, -1, 1.3113417e-07, 0, 0, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
